--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "rester",
-    "version": "0.0.0",
+    "version": "1.1.0",
     "scripts": {
         "ng": "ng",
         "start": "ng serve",
@@ -21,6 +21,7 @@
         "@angular/platform-browser": "^14.2.0",
         "@angular/platform-browser-dynamic": "^14.2.0",
         "@angular/router": "^14.2.0",
+        "@angular/service-worker": "^14.2.6",
         "rxjs": "~7.5.0",
         "tslib": "^2.3.0",
         "zone.js": "~0.11.4"
